deploy-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx2
  labels:
    dep_app: nginx2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      containers:
      - name: nginx2
        image: nginx
        ports:
        - containerPort: 80
