deployment-2.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-2
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      deployment: nginx-2
  template:
    metadata:
      labels:
        deployment: nginx-2
    spec:
      containers:
      - name: nginx
        image: nginx:1.21.5
        ports:
        - name: nginx-port
          containerPort: 80
