deployment-3.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-3
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      deployment: nginx-3
  template:
    metadata:
      labels:
        deployment: nginx-3
    spec: 
      containers: 
      - name: nginx
        image: nginx:1.21.5
