deployment-4.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-4
  namespace: dev
spec:
  replicas: 3
  selector: 
    matchLabels: 
      app: deployment-4
  template:
    metadata:
      labels:
        app: deployment-4
    spec:
      containers:
      - name: nginx
        image: nginx:1.21.6
