deployment-configmap.yml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: deployment-configmap
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: configmap
  template:
    metadata:
      labels:
        deployment: configmap
    spec:
      containers:
      - name: nginx
        image: nginx:1.21.5
        volumeMounts:
        - name: config
          mountPath: /tmp/logs
      volumes:
      - name: config
        configMap: 
          name: config-map
