deployment.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      deployment: nginx
  template:
    metadata:
      labels:
        deployment: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.21.5
