nginx-pod.yml
---

apiVersion: v1
kind: Namespace
metadata: 
  name: test
  

---

apiVersion: v1
kind: Pod 
metadata:
  name: nginx-pod
  namespace: test

spec:
  containers: 
    - name: nginx-containers
      image: nginx:1.17.2
