pc-daemonset.yml
---

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-daemonset
  namespace: dev
spec:
  selector:
    matchLabels:
      daemonset: nginx
  template:
    metadata:
      labels:
        daemonset: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.21.5
