pods-base.yml

---

# 使用定义最简单的容器列表

apiVersion: v1
kind: Pod
metadata:
  name: pod-base
  namespace: dev
  labels:
    user: ian
spec:
  containers:
  - name: nginx
    image: nginx:1.21.4
  - name: busybox
    image: busybox:1.34.1
    command: ["/bin/sh", "-c", "touch /tmp/test; while true; do /bin/echo $(date +%T) >> /tmp/test; sleep 3; done;"]
