pods-port.yml

---

# pod 端口配置

apiVersion: v1
kind: Pod
metadata: 
  name: pod-port
  namespace: dev
spec:
  containers:
  - name: nginx
    image: nginx:1.21.4
    imagePullPolicy: IfNotPresent
    ports:
    - name: nginx-port
      containerPort: 80
      protocol: TCP
