volume-hostpath.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: volume-hostpath
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: volume-hostpath
  template: 
    metadata:
      labels:
        deployment: volume-hostpath
    spec: 
      containers: 
      - name: nginx
        image: nginx:1.21.5
        volumeMounts:
        - name: logs-volume
          mountPath: /var/log/nginx
      - name: busybox
        image: busybox
        command:
        - /bin/sh
        - -c 
        - tail -f /logs/access.log
        volumeMounts:
        - name: logs-volume
          mountPath: /logs
      volumes:
      - name: logs-volume
        hostPath: 
          path: /data/logs
          type: DirectoryOrCreate
