volume-nfs.yml

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: volume-nfs
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: volume-nfs
  template:
    metadata:
      labels:
        deployment: volume-nfs
    spec:
      restartPolicy: Always
      containers:
      - name: nginx
        image: nginx:1.21.5
        ports:
        - containerPort: 80
        volumeMounts:
        - name: logs-volume
          mountPath: /var/log/nginx
      - name: busybox
        image: busybox
        command:
        - /bin/sh
        - -c 
        - |
          tail -f /logs/access.log
        volumeMounts:
        - name: logs-volume
          mountPath: /logs
      volumes:
      - name: logs-volume
        nfs:
          server: 10.0.0.10
          path: /mnt/data
