demo1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo1
  namespace: dev
spec:
  selector:
    app: demo1
  ports:
  - port: 3000
    targetPort: http
