service-deployment-2.yml
---

apiVersion: v1
kind: Service
metadata:
  name: service-deployment-2
  namespace: dev
spec:
  selector: 
    deployment: nginx-2
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 80
    targetPort: 80
