service-deployment-3.yml
---

apiVersion: v1
kind: Service
metadata:
  name: service-deployment-3
  namespace: dev
spec:
  selector:
    deployment: nginx-3
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 80
    targetPort: 80
