service-node-port.yml
---

apiVersion: v1
kind: Service
metadata:
  name: service-node-port
  namespace: dev

spec:
  selector:
    deployment: nginx-2
  type: NodePort
  ports:
  - port: 80
    nodePort: 30002
    targetPort: 80
