service.yml
---

apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment-service
  namespace: dev
spec: 
  selector:
    deployment: nginx-2
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
