demo1-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo1
  namespace: dev
spec:
  rules:
    # - host: "foo.com"
  - http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: demo1
            port: 
              name: http
